CCMSPUI-788 | Updated SubmissionSummaryBuilder to build from a list of submissions, also added tests to get claim method in DataClaimsRestServiceIntegrationTest