@@ -1,8 +1,10 @@
 package uk.gov.justice.laa.bulkclaim.builder;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import uk.gov.justice.laa.bulkclaim.dto.summary.BulkClaimSummary;
@@ -32,23 +34,39 @@ public class SubmissionSummaryBuilder {
    * @param submissionResponse The source submission response..
    * @return The built {@link BulkClaimSummary}.
    */
-  public BulkClaimSummary build(GetSubmission200Response submissionResponse) {
-    // Map submission response to summary row
-    SubmissionSummaryRow summaryRow =
-        bulkClaimSummaryMapper.toSubmissionSummaryRow(submissionResponse);
+  public BulkClaimSummary build(List<GetSubmission200Response> submissionResponse) {
 
-    // Get the submission reference
-    UUID submissionReference = submissionResponse.getSubmission().getSubmissionId();
-    // Get only failed claims and map to a claim error object using data claims API to get further
-    //  information regarding the claim.
-    List<ClaimValidationError> errors =
-        dataClaimsRestService.getValidationErrors(submissionReference).block();
+    // Get all summary rows
+    List<SubmissionSummaryRow> summaryRows =
+        bulkClaimSummaryMapper.toSubmissionSummaryRows(submissionResponse);
 
-    List<SubmissionSummaryClaimError> submissionSummaryClaimErrors =
-        errors.stream()
-            .map(x -> bulkClaimSummaryMapper.toSubmissionSummaryClaimError(submissionReference, x))
-            .toList();
-    return new BulkClaimSummary(
-        Collections.singletonList(summaryRow), submissionSummaryClaimErrors);
+    // Get all errors using the data claims rest service.
+    Map<UUID, List<ClaimValidationError>> errorMap =
+        summaryRows.stream()
+            .collect(
+                Collectors.toMap(
+                    SubmissionSummaryRow::submissionReference, // Key: submissionReference
+                    row ->
+                        dataClaimsRestService
+                            .getValidationErrors(row.submissionReference()) // Value: List of errors
+                            .blockOptional()
+                            .orElse(List.of()) // Handle empty results
+                    ));
+
+    // Loop through an error map and add claims
+    List<SubmissionSummaryClaimError> errorList = new ArrayList<>();
+    errorMap
+        .keySet()
+        .forEach(
+            submissionReference ->
+                errorList.addAll(
+                    errorMap.get(submissionReference).stream()
+                        .map(
+                            x ->
+                                bulkClaimSummaryMapper.toSubmissionSummaryClaimError(
+                                    submissionReference, x))
+                        .toList()));
+
+    return new BulkClaimSummary(summaryRows, errorList);
   }
 }
